Add Context, States  Testing for state handler

--- a/StatePattern.csproj
+++ b/StatePattern.csproj
@@ -47,15 +47,16 @@
     <Compile Include="Enums\State.cs" />
     <Compile Include="Interface\IState.cs" />
     <Compile Include="Models\Contexts\StateContext.cs" />
+    <Compile Include="Models\States\StateA.cs" />
+    <Compile Include="Models\States\StateB.cs" />
+    <Compile Include="Models\States\StateC.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\States\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
